Update all code

--- a/Townguide/app/src/main/res/values/strings.xml
+++ b/Townguide/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Let's visit Arrowtown!</string>
+    <string name="app_name">Visit Arrowtown</string>
     <string name="landing_welcome_msg">Fun Fact Quiz</string>
 </resources>
